--- a/assets/productos.html
+++ b/assets/productos.html
@@ -27,19 +27,19 @@
         <ul class="products" >
             <li>
                 <h2>Cabello</h2>
-                <img src="./imagenes/cabello.jpg" alt="">
+                <img class="img-products" src="./imagenes/cabello.jpg" alt="">
                 <p class="product-description" >Con tijera o maquina a gusto del cliente</p>
                 <p class="price" >$ 10.00</p>
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="./imagenes/barba.jpg" alt="">
+                <img class="img-products" src="./imagenes/barba.jpg" alt="">
                 <p class="product-description">Corte de barba profesional</p>
                 <p class="price" id="price-low" >$ 08.00</p>
             </li>
             <li>
                 <h2>Cabello + Barba</h2>
-                <img src="./imagenes/cabello+barba.jpg" alt="">
+                <img class="img-products" src="./imagenes/cabello+barba.jpg" alt="">
                 <p class="product-description" >Paquete completo de cabello y barba</p>
                 <p class="price">$ 15.00</p>
             </li>
