--- a/assets/contactos.html
+++ b/assets/contactos.html
@@ -102,8 +102,10 @@
                 </tr>
             </tbody>
         </table>
-        
-        <input type="submit" value="Submit" class="submit" >
+        <div class="containerButton">
+
+            <input type="submit" value="Submit" class="submit" >
+        </div>
     </div>
 
         </main>
